--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -16,8 +16,6 @@ on:
 
 env:
   CANCEL_WORKFLOW: false
-  APPLICATION_VERSION_IDS:
-  TARGET_MES:
 jobs:
   get-application-version-id:
       runs-on: ubuntu-latest
@@ -35,6 +33,8 @@ jobs:
       # Get all files in commit
         - id: files
           uses: jitterbit/get-changed-files@v1
+          with:
+            format: csv
 
         - name: Get Application version ID from asyncapi spec file
           run: |
