--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -36,6 +36,11 @@ jobs:
           with:
             format: csv
 
+        - id: changed-files
+          uses: tj-actions/changed-files@v11.2
+          with:
+              separator: ","
+      
         - name: Get Application version ID from asyncapi spec file
           run: |
             for changed_file in ${{ steps.files.outputs.all }}
@@ -63,6 +68,16 @@ jobs:
               echo "APPLICATION_VERSION_IDS not empty"
               echo "APPLICATION_VERSION_IDS=$APPLICATION_VERSION_IDS" >> $GITHUB_ENV
             fi
+
+        - name: List all modified files
+          run: |
+            IFS=$',' read -a MODIFIED_FILES_ARRAY <<< "${{ steps.changed-files-comma.outputs.modified_files }}"
+            for file in "${MODIFIED_FILES_ARRAY[@]}"; do
+              echo $file
+            done
+            unset IFS
+          shell:
+            bash
 
         - name: Cancel Workflow if no asyncAPI file present in PR
           if: env.CANCEL_WORKFLOW == 'true'
