--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -42,37 +42,37 @@ jobs:
           with:
               separator: ","
       
-        - name: Get Application version ID from asyncapi spec file
-          run: |
-            for changed_file in ${{ steps.files.outputs.all }}
-            do
-              echo "changed file: "
-              echo ${changed_file}
-              if [[ ( ${changed_file} == *.yaml ) || ( ${changed_file} == *.yml )]]
-              then
-                APPLICATION_VERSION_IDS=$(awk '/x-ep-application-version-id: \"/,/\"/'  ${changed_file} | cut -d'"' -f 2)
-                echo "in yml file"
-                echo ${APPLICATION_VERSION_IDS}
-              fi
-              if [[ ( ${changed_file} == *.json )]]
-              then
-                APPLICATION_VERSION_IDS=$(awk '/\"x-ep-application-version-id\": \"/,/\"/'  Shipping\ Service-0.1.1.json | cut -d'"' -f 4)
-                echo "in json file"
-                echo ${APPLICATION_VERSION_IDS}
-              fi
-            done
-            if [ ${#APPLICATION_VERSION_IDS[@]} -eq 0 ]; then
-              echo "Cancel workflow. No applicaitn IDs found to promote!"
-              echo "Make sure the x-ep-application-version-id extension is defined in the asyncapi spec file in the info block"
-              echo "CANCEL_WORKFLOW=true" >> $GITHUB_ENV
-            else
-              echo "APPLICATION_VERSION_IDS not empty"
-              echo "APPLICATION_VERSION_IDS=$APPLICATION_VERSION_IDS" >> $GITHUB_ENV
-            fi
+        # - name: Get Application version ID from asyncapi spec file
+        #   run: |
+        #     for changed_file in ${{ steps.files.outputs.all }}
+        #     do
+        #       echo "changed file: "
+        #       echo ${changed_file}
+        #       if [[ ( ${changed_file} == *.yaml ) || ( ${changed_file} == *.yml )]]
+        #       then
+        #         APPLICATION_VERSION_IDS=$(awk '/x-ep-application-version-id: \"/,/\"/'  ${changed_file} | cut -d'"' -f 2)
+        #         echo "in yml file"
+        #         echo ${APPLICATION_VERSION_IDS}
+        #       fi
+        #       if [[ ( ${changed_file} == *.json )]]
+        #       then
+        #         APPLICATION_VERSION_IDS=$(awk '/\"x-ep-application-version-id\": \"/,/\"/'  Shipping\ Service-0.1.1.json | cut -d'"' -f 4)
+        #         echo "in json file"
+        #         echo ${APPLICATION_VERSION_IDS}
+        #       fi
+        #     done
+        #     if [ ${#APPLICATION_VERSION_IDS[@]} -eq 0 ]; then
+        #       echo "Cancel workflow. No applicaitn IDs found to promote!"
+        #       echo "Make sure the x-ep-application-version-id extension is defined in the asyncapi spec file in the info block"
+        #       echo "CANCEL_WORKFLOW=true" >> $GITHUB_ENV
+        #     else
+        #       echo "APPLICATION_VERSION_IDS not empty"
+        #       echo "APPLICATION_VERSION_IDS=$APPLICATION_VERSION_IDS" >> $GITHUB_ENV
+        #     fi
 
         - name: List all modified files
           run: |
-            IFS=$',' read -a MODIFIED_FILES_ARRAY <<< "${{ steps.changed-files-comma.outputs.modified_files }}"
+            IFS=$',' read -a MODIFIED_FILES_ARRAY <<< "${{ steps.changed-files.outputs.modified_files }}"
             for file in "${MODIFIED_FILES_ARRAY[@]}"; do
               echo $file
             done
