--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -75,17 +75,18 @@ jobs:
             IFS=$',' read -a MODIFIED_FILES_ARRAY <<< "${{ steps.changed-files.outputs.modified_files }}"
             for file in "${MODIFIED_FILES_ARRAY[@]}"
               do
+                file=$( echo "$file" | sed 's/ /\\ /g' )
                 echo "changed file: $file"
                 if [[ ( ${file} == *.yaml ) || ( ${file} == *.yml )]]
                 then
-                  APPLICATION_VERSION_IDS=$(awk '/x-ep-application-version-id: \"/,/\"/'  '${file}' | cut -d'"' -f 2)
+                  APPLICATION_VERSION_IDS=$(awk '/x-ep-application-version-id: \"/,/\"/'  ${file} | cut -d'"' -f 2)
                   echo "in yml file"
                   echo $APPLICATION_VERSION_IDS
                 fi
                 if [[ ( ${file} == *.json )]]
                 then
                   echo "in json file"
-                  APPLICATION_VERSION_IDS=$(awk '/\"x-ep-application-version-id\": \"/,/\"/'  '${file}'| cut -d'"' -f 4)
+                  APPLICATION_VERSION_IDS=$(awk '/\"x-ep-application-version-id\": \"/,/\"/'  ${file} | cut -d'"' -f 4)
                   echo ${APPLICATION_VERSION_IDS}
                 fi
               done
