--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -73,6 +73,8 @@ jobs:
         - name: List all modified files
           run: |
             IFS=$',' read -a MODIFIED_FILES_ARRAY <<< "${{ steps.changed-files.outputs.modified_files }}"
+            ls -a
+            ls asyncapi
             for file in "${MODIFIED_FILES_ARRAY[@]}"
               do
                 file=$( echo "$file" | sed 's/ /\\ /g' )
