--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -73,12 +73,12 @@ jobs:
         - name: List all modified files
           run: |
             IFS=$',' read -a MODIFIED_FILES_ARRAY <<< "${{ steps.changed-files.outputs.modified_files }}"
-            ls -a
-            ls asyncapi
+            pwd
             for file in "${MODIFIED_FILES_ARRAY[@]}"
               do
                 file=$( echo "$file" | sed 's/ /\\ /g' )
                 echo "changed file: $file"
+                cat $file
                 if [[ ( ${file} == *.yaml ) || ( ${file} == *.yml )]]
                 then
                   APPLICATION_VERSION_IDS=$(awk '/x-ep-application-version-id: \"/,/\"/'  ${file} | cut -d'"' -f 2)
