--- a/workflowFiles/promote.yml
+++ b/workflowFiles/promote.yml
@@ -12,10 +12,12 @@
 name: Promote application in target modeled event mesh
 on:
   push: 
-    branches: [ prod ]
+    branches: [ prod, dev, int ]
 
 env:
   CANCEL_WORKFLOW: false
+  APPLICATION_VERSION_ID:
+  TARGET_MES:
 jobs:
   get-application-version-id:
       runs-on: ubuntu-latest
@@ -29,54 +31,36 @@ jobs:
           uses: actions/checkout@master
           with:
             ref: ${{ github.ref }}
-            fetch-depth: 0
             
       # Get all files in commit
-        - id: changed-files
-          uses: tj-actions/changed-files@v11.2
-          with:
-            separator: ","
-      
-        - name: List all modified files
+        - id: files
+          uses: jitterbit/get-changed-files@v1
+          with: 
+            format: ''
+
+        - name: Check if an AsycnAPI file is in commit
           run: |
-            IFS=$',' read -a MODIFIED_FILES_ARRAY <<< "${{ steps.changed-files.outputs.modified_files }}"
-            for file in "${MODIFIED_FILES_ARRAY[@]}"
-                do
-                  echo "changed file: $file"
-                  if [[ ( ${file} == *.yaml ) || ( ${file} == *.yml )]]
-                  then
-                    APPLICATION_VERSION_IDS=$(awk '/x-ep-application-version-id: \"/,/\"/'  "${file}" | cut -d'"' -f 2)
-                    echo $APPLICATION_VERSION_IDS
-                  fi
-                  if [[ ( ${file} == *.json )]]
-                  then
-                    APPLICATION_VERSION_IDS=$(awk '/\"x-ep-application-version-id\": \"/,/\"/'  "${file}" | cut -d'"' -f 4)
-                    echo ${APPLICATION_VERSION_IDS}
-                  fi
-                done
-              unset IFS
-              if [ -z $APPLICATION_VERSION_IDS ]; then
-                echo "Cancel workflow. No applicaitn IDs found to promote!"
-                echo "Make sure the x-ep-application-version-id extension is defined in the asyncapi spec file in the info block"
-                echo "CANCEL_WORKFLOW=true" >> $GITHUB_ENV
-              else
-                echo "APPLICATION_VERSION_IDS not empty"
-                echo "APPLICATION_VERSION_IDS=$APPLICATION_VERSION_IDS" >> $GITHUB_ENV
+            asyncapiFiles=()
+            for changed_file in ${{ steps.files.outputs.all }}
+            do
+              if [[ ( ${changed_file} == *.yaml ) || ( ${changed_file} == *.yml ) || ( ${changed_file} == *.json ) ]]
+              then
+                asyncapi validate ${changed_file} &> check.txt
+                # Check if the file is an asyncapi spec
+                if ! grep -q "field is missing." check.txt; then
+                  asyncapiFiles+=("$changed_file")
+                  echo "This is an asyncapi file"
+                fi
               fi
-          shell:
-            bash
+            done
+            if [ ${#asyncapiFiles[@]} -eq 0 ]; then
+              echo "Cancel workflow. No file found!"
+              echo "CANCEL_WORKFLOW=true" >> $GITHUB_ENV
+            else
+              echo $asyncapiFiles
+            fi
 
         - name: Cancel Workflow if no asyncAPI file present in PR
           if: env.CANCEL_WORKFLOW == 'true'
           uses: andymckay/cancel-action@0.2
-        
-        - name: Checkout terraform configuration repo
-          uses: actions/checkout@v2
-          with:
-            repository: TamimiGitHub/solace-terraform-provisioning
-        
-        - name: Install dependencies
-          run: npm install
-        
-        - name: Promote applicaiton
-          run: npm run promote -- -av ${{ env.APPLICATION_VERSION_IDS }} -mes PROD-Kafka
+  
