--- a/.github/workflows/plan-prod.yml
+++ b/.github/workflows/plan-prod.yml
@@ -12,7 +12,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
-  terraform-init:
+  terraform-plan:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -31,7 +31,7 @@ jobs:
 
       - name: Terraform plan
         id: plan
-        run: npm run config; npm run generate; cd terraform-config; terraform init -reconfigure; terraform plan
+        run: SOLACE_MESSAGING_SERVICE=$SOLACE_MESSAGING_SERVICE npm run plan
       
       - uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
