--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -20,9 +20,5 @@ jobs:
           repository: TamimiGitHub/solace-terraform-provisioning
           path: terraform
         
-      - name: list files
-        run: |
-          pwd
-          ls
-          echo "==========="
-          ls ../
+      - name: Install dependencies
+        run: cd terraform; npm install
