--- a/.github/workflows/claat.yml
+++ b/.github/workflows/claat.yml
@@ -32,7 +32,10 @@ jobs:
       
       - name: Echo Path
         run: echo $PATH
-      
+
+      - name: list files
+        run: ls -a
+
       - name: Export file
         run: cd main/markdown/dt-otl; claat export dt-otel.md
 
