--- a/.github/workflows/netlify-PR.yml
+++ b/.github/workflows/netlify-PR.yml
@@ -19,9 +19,11 @@ jobs:
         with:
           node-version: 12.16.2
       
-      - name: Checkout Current Branch
+      - name: Checkout Current Commit
         uses: actions/checkout@master
         with:
+          ref: ${{ github.ref }}
+          fetch-depth: 0
           path: main
 
       - name: Checkout claat repo
@@ -54,7 +56,7 @@ jobs:
             echo $file
             folder="$(basename $file .md)"
             google-tools/claat/claat export -o codelabs-site/site/solace-dev-codelabs/codelabs main/$file
-            vi codelabs-site/site/solace-dev-codelabs/codelabs/$folder/index.html
+            cat codelabs-site/site/solace-dev-codelabs/codelabs/$folder/index.html
           done
           cd codelabs-site/site && npm i && npm run dist
 
