--- a/.github/workflows/netlify-PR.yml
+++ b/.github/workflows/netlify-PR.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout Current Commit
         uses: actions/checkout@master
         with:
-          ref: ${{ github.ref }}
+          ref: ${{ github.head_ref }}
           fetch-depth: 0
           path: main
 
