--- a/.github/workflows/claat.yml
+++ b/.github/workflows/claat.yml
@@ -5,6 +5,8 @@ on:
     paths:
       - markdown/**
 
+env:
+  CHANGED_CODELABS: ''
 jobs:
   Claat-Export:
     runs-on: ubuntu-latest
@@ -41,7 +43,16 @@ jobs:
           for file in ${{ steps.changed-markdown-files.outputs.all_changed_files }}; do
             echo $file
             google-tools/claat/claat export -o main/codelabs/ main/$file
+            echo "CHANGED_CODELABS=${CHANGED_CODELABS} $file" >> $GITHUB_ENV
           done
 
-      - name: list files in codelabs
-        run: ls main/codelabs
+      - name: Push files to repo
+        run: |
+          cd main
+          git config user.name SollyBot
+          git config user.email community@solace.com
+          git commit -am "Adding ${{env.CHANGED_CODELABS}} html files"
+          git push
+      
+      - name: Update site rep
+        run: echo "Webhook trigger action"
