--- a/.github/workflows/site-update.yml
+++ b/.github/workflows/site-update.yml
@@ -1,7 +1,7 @@
 name: Update Codelabs Site
 on: 
   workflow_run:
-    workflows: [Claat Export]
+    workflows: [Export Codelabs]
     types: 
       - completed
 
