--- a/.github/workflows/export-codelab.yml
+++ b/.github/workflows/export-codelab.yml
@@ -41,9 +41,9 @@ jobs:
       - name: Generate html codelabs
         run: |
           for file in ${{ steps.changed-markdown-files.outputs.all_changed_files }}; do
-            echo $file
+            folder="$(basename $file .md)"
             google-tools/claat/claat export -o main/codelabs/ main/$file
-            echo "CHANGED_CODELABS=${CHANGED_CODELABS} $file" >> $GITHUB_ENV
+            echo "CHANGED_CODELABS=${CHANGED_CODELABS} $folder" >> $GITHUB_ENV
           done
           
       - name: Push updates to codelabs repo
