--- a/.github/workflows/site-update.yml
+++ b/.github/workflows/site-update.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   Update-codelabs-site:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout site repo
