--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,6 +13,12 @@ jobs:
           repository: SolaceDev/solace-dev-codelabs
           path: codelabs
         
+      - name: Install SSH key
+        uses: shimataro/ssh-key-action@v2
+        with: 
+          key: ${{ secrets.SSH_KEY }}
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
+
       - name: Push updates to codelabs repo PAT
         run: |
           cd codelabs
