--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,7 +24,6 @@ jobs:
           echo "Test File" > test.txt
           git add test.txt
           git commit -m "Adding a test file"
-          # git push origin master
-          git push https://${{env.SOLACE_COMMUNITY_BOT_ULTIMATE}}@github.com/SolaceDev/solace-dev-codelabs
+          git push https://solacecommunity-bot:${{env.SOLACE_COMMUNITY_BOT_ULTIMATE}}@github.com/Solacedev/solace-dev-codelabs
         env:
           GITHUB_TOKEN: ${{ secrets.SOLACE_COMMUNITY_BOT_ULTIMATE }}
